--- a/_posts/2026-02-18-zork.md
+++ b/_posts/2026-02-18-zork.md
@@ -16,10 +16,10 @@ This project was my attempt to automate that loop: an autonomous agent that play
 This project was part of the [2026 LLM Course](https://llm.labri.fr/) taught by Nathanaël Fijalkow and Marc Lelarge. Thank you for this fun project!
 
 ---
-![Zork! Game Text Adventure](images/zork.jpg)
+![Zork! Game Text Adventure](images/zork/zork.jpg)
 ---
 
-## What I built
+# What I built
 
 - An **MCP server** that exposes a text adventure game as a small set of tools like “play an action”, “check memory”, “see the map”, and “check inventory”.
 - A **ReAct-style agent** that loops:
@@ -31,7 +31,7 @@ This project was part of the [2026 LLM Course](https://llm.labri.fr/) taught by 
 
 ---
 
-## The assignment goal (the “why”)
+# The assignment goal (the “why”)
 
 > Use an MCP server to interact with the game, and use a language model to understand the game state and make decisions—so the agent can explore and solve puzzles autonomously.
 
@@ -44,7 +44,7 @@ A text adventure is a perfect “agent playground”:
 
 ---
 
-## Architecture: a clean separation of “tools” and “brain”
+# Architecture: a clean separation of “tools” and “brain”
 
 The system is split into two major pieces:
 
@@ -74,7 +74,7 @@ run_agent.py
 
 ---
 
-## Why MCP is a great fit for this
+# Why MCP is a great fit for this
 
 MCP is a strong match for autonomous agents because it forces good boundaries:
 
@@ -87,11 +87,11 @@ In short: MCP makes it feel like you’re building a system, not just prompt-cha
 
 ---
 
-## Implementation: the MCP server (tool layer)
+# Implementation: the MCP server (tool layer)
 
 The MCP server wraps a game environment and adds “agent-friendly” structure.
 
-### Tools exposed
+## Tools exposed
 
 A typical minimal toolbox looks like:
 
@@ -100,7 +100,7 @@ A typical minimal toolbox looks like:
 - `get_map() -> str` — a discovered location graph inferred from movements.
 - `inventory() -> str` — what the player is carrying.
 
-### Why the server does more than “just return text”
+## Why the server does more than “just return text”
 
 Raw game text is rich but messy. The server can cheaply provide structure that helps the agent reason:
 
@@ -113,7 +113,7 @@ That little bit of structure dramatically improves reliability.
 
 ---
 
-## Implementation: the ReAct agent (observe → reflect → act)
+# Implementation: the ReAct agent (observe → reflect → act)
 
 The agent uses a strict, parseable format:
 
@@ -125,7 +125,7 @@ ARGS: <JSON>
 
 This is one of the highest-leverage decisions in the whole project: it keeps tool invocation machine-readable and makes failures easier to diagnose.
 
-### The loop
+## The loop
 
 Each step:
 
@@ -134,7 +134,7 @@ Each step:
 3) Act by calling one MCP tool.
 4) Update counters + logs.
 
-### Exploration-first strategy
+## Exploration-first strategy
 
 My current agent is explicitly biased toward exploration:
 
@@ -147,7 +147,7 @@ This doesn’t solve Zork on its own, but it is capable of exploring Zork world 
 
 ---
 
-## Example gameplay (from a real run)
+# Example gameplay (from a real run)
 
 This excerpt is adapted from a Zork run. I’m including the key steps rather than the full transcript.
 
@@ -183,11 +183,11 @@ That’s the pattern I was aiming for:
 
 The gradio UI I built to debug runs:
 
-![Gradio UI](images/gradio_ui.jpg)
+![Gradio UI](images/zork/gradio_ui.jpg)
 
 ---
 
-## Results so far
+# Results so far
 
 From a recent structured run log (`logs/zork1_StudentAgent_20260217_224501.json`):
 
@@ -202,7 +202,7 @@ This is not “solving Zork” yet, but it’s a solid exploration baseline. The
 
 ---
 
-## The platform: Huggingface as the LLM provider
+# The platform: Huggingface as the LLM provider
 
 I used Huggingface Inference as the LLM backend (via `huggingface_hub.InferenceClient`).
 I paid the $10 for the month I was going to work on this project.
@@ -213,11 +213,11 @@ What I liked:
 - easy to try multiple models with the same interface,
 - good fit for experiments and iteration.
 
-![Huggingface](images/huggingface.jpg)
+![Huggingface](images/zork/huggingface.jpg)
 
 ---
 
-## Extra things I built (that made this fun)
+# Extra things I built (that made this fun)
 
 A few “support tools” made development much smoother:
 
@@ -229,7 +229,7 @@ This tooling matters because agents fail in weird ways. Without observability, y
 
 ---
 
-## Things I learned
+# Things I learned
 
 - Huggingface makes it easy to experiment with multiple LLMs.
 - Tool-first architecture (MCP) keeps complexity contained.
@@ -238,7 +238,7 @@ This tooling matters because agents fail in weird ways. Without observability, y
 
 ---
 
-## More to explore
+# More to explore
 
 Next steps I’m excited about:
 
@@ -253,7 +253,7 @@ Next steps I’m excited about:
 
 ---
 
-## References
+# References
 
 - ZorkGPT (adaptive play, multi-agent ideas): https://github.com/stickystyle/ZorkGPT
 - Hinterding’s Zork + AI writeup: https://www.hinterding.com/blog/zork/
