--- a/_posts/2026-02-18-zork.md
+++ b/_posts/2026-02-18-zork.md
@@ -16,7 +16,7 @@ This project was my attempt to automate that loop: an autonomous agent that play
 This project was part of the [2026 LLM Course](https://llm.labri.fr/) taught by Nathanaël Fijalkow and Marc Lelarge. Thank you for this fun project!
 
 ---
-![Zork! Game Text Adventure](images/zork/zork.jpg)
+![Zork! Game Text Adventure](/images/zork/zork.jpg)
 ---
 
 # What I built
@@ -183,7 +183,7 @@ That’s the pattern I was aiming for:
 
 The gradio UI I built to debug runs:
 
-![Gradio UI](images/zork/gradio_ui.jpg)
+![Gradio UI](/images/zork/gradio_ui.jpg)
 
 ---
 
@@ -213,7 +213,7 @@ What I liked:
 - easy to try multiple models with the same interface,
 - good fit for experiments and iteration.
 
-![Huggingface](images/zork/huggingface.jpg)
+![Huggingface](/images/zork/huggingface.jpg)
 
 ---
 
