--- a/_posts/2026-02-18-zork.md
+++ b/_posts/2026-02-18-zork.md
@@ -21,7 +21,7 @@ This project was part of the [2026 LLM Course](https://llm.labri.fr/) taught by 
 
 # What I built
 
-- An **MCP server** that exposes a text adventure game as a small set of tools like “play an action”, “check memory”, “see the map”, and “check inventory”.
+- A **MCP server** that exposes a text adventure game as a small set of tools like “play an action”, “check memory”, “see the map”, and “check inventory”.
 - A **ReAct-style agent** that loops:
   1) observe the latest game output,
   2) think about what to do next,
@@ -31,9 +31,9 @@ This project was part of the [2026 LLM Course](https://llm.labri.fr/) taught by 
 
 ---
 
-# The assignment goal (the “why”)
+# The assignment goal
 
-> Use an MCP server to interact with the game, and use a language model to understand the game state and make decisions—so the agent can explore and solve puzzles autonomously.
+> Use a MCP server to interact with the game, and use a language model to understand the game state and make decisions—so the agent can explore and solve puzzles autonomously.
 
 A text adventure is a perfect “agent playground”:
 
@@ -86,6 +86,14 @@ MCP is a strong match for autonomous agents because it forces good boundaries:
 In short: MCP makes it feel like you’re building a system, not just prompt-chaining.
 
 ---
+
+Debugging MCP is also handy via the MCP inspector.
+
+You can see the defined tools and can interact with them directly in this UI.
+
+![MCP Tools defined](/images/zork/mcp_inspector.jpg)
+![MCP Tool execution](/images/zork/mcp_inspector_result.jpg)
+
 
 # Implementation: the MCP server (tool layer)
 
