--- a/_posts/2026-02-18-zork.md
+++ b/_posts/2026-02-18-zork.md
@@ -1,5 +1,5 @@
 ---
-title: Building an Autonomous Agent to Play Text Adventures (LLM + MCP)
+title: "Building an Autonomous Agent to Play Text Adventures (LLM + MCP) 🕹️🤖"
 date: 2026-02-18
 tags: [llm, agents, mcp, fastmcp, zork, jericho, huggingface]
 ---
@@ -7,7 +7,7 @@ tags: [llm, agents, mcp, fastmcp, zork, jericho, huggingface]
 1. TOC
 {:toc}
 
-# Building an Autonomous Agent to Play Text Adventures (LLM + MCP)
+# Building an Autonomous Agent to Play Text Adventures (LLM + MCP) 🕹️🤖
 
 As a kid, I spent hours playing games like *Sam & Max Hit the Road* and *Monkey Island*. They aren’t strictly text adventures, but the core loop is the same: explore, read clues, try actions, get stuck, backtrack, and slowly progress in this parallel universe.
 
@@ -19,7 +19,7 @@ This project was part of the [2026 LLM Course](https://llm.labri.fr/) taught by 
 ![Zork! Game Text Adventure](/images/zork/zork.jpg)
 ---
 
-# What I built
+# What I built 🧰
 
 - A **MCP server** that exposes a text adventure game as a small set of tools like “play an action”, “check memory”, “see the map”, and “check inventory”.
 - A **ReAct-style agent** that loops:
@@ -31,7 +31,7 @@ This project was part of the [2026 LLM Course](https://llm.labri.fr/) taught by 
 
 ---
 
-# The assignment goal
+# The assignment goal 🎯
 
 > Use a MCP server to interact with the game, and use a language model to understand the game state and make decisions—so the agent can explore and solve puzzles autonomously.
 
@@ -44,7 +44,7 @@ A text adventure is a perfect “agent playground”:
 
 ---
 
-# Architecture: a clean separation of “tools” and “brain”
+# Architecture: a clean separation of “tools” and “brain” 🏗️
 
 The system is split into two major pieces:
 
@@ -74,7 +74,7 @@ run_agent.py
 
 ---
 
-# Why MCP is a great fit for this
+# Why MCP is a great fit for this 🔧
 
 MCP is a strong match for autonomous agents because it forces good boundaries:
 
@@ -95,7 +95,7 @@ You can see the defined tools and can interact with them directly in this UI.
 ![MCP Tool execution](/images/zork/mcp_inspector_result.jpg)
 
 
-# Implementation: the MCP server (tool layer)
+# Implementation: the MCP server (tool layer) 🛠️
 
 The MCP server wraps a game environment and adds “agent-friendly” structure.
 
@@ -121,7 +121,7 @@ That little bit of structure dramatically improves reliability.
 
 ---
 
-# Implementation: the ReAct agent (observe → reflect → act)
+# Implementation: the ReAct agent (observe → reflect → act) 🤖🧠
 
 The agent uses a strict, parseable format:
 
@@ -137,10 +137,10 @@ This is one of the highest-leverage decisions in the whole project: it keeps too
 
 Each step:
 
-1) Observe the latest game output (usually from `play_action`).
-2) Reflect using the LLM and short-term state (recent actions, discovered locations, etc.).
-3) Act by calling one MCP tool.
-4) Update counters + logs.
+- 1) Observe the latest game output (usually from `play_action`).
+- 2) Reflect using the LLM and short-term state (recent actions, discovered locations, etc.).
+- 3) Act by calling one MCP tool.
+- 4) Update counters + logs.
 
 ## Exploration-first strategy
 
@@ -155,7 +155,7 @@ This doesn’t solve Zork on its own, but it is capable of exploring Zork world 
 
 ---
 
-# Example gameplay (from a real run)
+# Example gameplay (from a real run) 🎮
 
 This excerpt is adapted from a Zork run. I’m including the key steps rather than the full transcript.
 
@@ -195,7 +195,7 @@ The gradio UI I built to debug runs:
 
 ---
 
-# Results so far
+# Results so far 📊
 
 From a recent structured run log (`logs/zork1_StudentAgent_20260217_224501.json`):
 
@@ -210,7 +210,7 @@ This is not “solving Zork” yet, but it’s a solid exploration baseline. The
 
 ---
 
-# The platform: Huggingface as the LLM provider
+# The platform: Huggingface as the LLM provider ☁️
 
 I used Huggingface Inference as the LLM backend (via `huggingface_hub.InferenceClient`).
 I paid the $10 for the month I was going to work on this project.
@@ -225,7 +225,7 @@ What I liked:
 
 ---
 
-# Extra things I built (that made this fun)
+# Extra things I built (that made this fun) ✨
 
 A few “support tools” made development much smoother:
 
@@ -237,7 +237,7 @@ This tooling matters because agents fail in weird ways. Without observability, y
 
 ---
 
-# Things I learned
+# Things I learned 📝
 
 - Huggingface makes it easy to experiment with multiple LLMs.
 - Tool-first architecture (MCP) keeps complexity contained.
@@ -246,7 +246,7 @@ This tooling matters because agents fail in weird ways. Without observability, y
 
 ---
 
-# More to explore
+# More to explore 🚀
 
 Next steps I’m excited about:
 
@@ -261,7 +261,7 @@ Next steps I’m excited about:
 
 ---
 
-# References
+# References 🔗
 
 - ZorkGPT (adaptive play, multi-agent ideas): https://github.com/stickystyle/ZorkGPT
 - Hinterding’s Zork + AI writeup: https://www.hinterding.com/blog/zork/
